# innovation-utilities

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
config/: transcribe_folder.yaml
config/speech/: transcribe_and_evaluate_folder_renfe380.yaml  transcribe_and_segment_folder.yaml  transcribe_folder.yaml
data/output/: common_voice_es_41913638.json  common_voice_es_41913640.json  common_voice_es_42044997.json
docs/: README_gendata.md  README_speech.md
examples/: transcribe_folder_example.py
examples/speech/: transcribe_and_evaluate_folder_example.py  transcribe_and_segment_folder_example.py  transcribe_folder_example.py
innovation/gendata/: __main__.py
innovation/gendata/methods/: default.py  method_manager.py
innovation/gendata/models/: model_manager.py  open_ai.py
innovation/gendata/models_examples/: openai.yml
innovation/gendata/tasks_examples/: complex.yml  simple.yml
innovation/gendata/utils/: class_manager.py  logger.py  timer.py  utils.py
innovation/speech/modules/: collect_data_module.py  transcribe_audios_module.py  transcripts_module.py
innovation/speech/utils/: io_utils.py
scripts/: activate_poetry_env.sh  docker_build.sh  docker_run.sh  poetry2requirements.sh  run_transcribe_folder_example.sh
scripts/speech/: run_transcribe_and_evaluate_folder_example_renfe380.sh  run_transcribe_and_segment_example.sh  run_transcribe_folder_example.sh
src/innovation_utilities/modules/: collect_data_module.py  transcribe_audios_module.py
src/innovation_utilities/utils/: io_utils.py
